--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <article>
 <div class="box">
 	<h1> How High Are Your Neighbors?</h1>
-	<h2> Drug activity increased after New York legalized cannabis. But which neighborhood parties the hardest?</h2>
+	<h2> Drug activity increased after New York legalized cannabis. But some areas party harder than others.</h2>
 	<h2 id="Byline"> Andrew Ancheta</h2>
 	<h2 id="Dateline"> Dec. 20, 2022</h2>
 
 <figure>
 		
 	<img src="images/queenshospitalcenter.jpg" alt="Picture of a hospital">
-	<figcaption><i>The highest place in NYC? The sidewalk outside this hospital was the subject of 1400 drug activity calls in 2022.</i> Photo: Andrew Ancheta</figcaption>
+	<figcaption><i>This sidewalk  was the subject of 1,400 drug complaints in 2022.</i> Photo: Andrew Ancheta</figcaption>
 
 </figure>
 
@@ -29,26 +29,25 @@
 
 
 <p>
-In March TK, 2021, the authorities of New York State enacted the Marijuana Regulation and Taxation Act, fully legalizing the recreational use of cannabis. The new law follows decades of harsh prohibition and aggressive policing. The plant had been decriminalized for medical use in 2016, and decriminalized for recreational purposes in 2019. </p>
+On March 31, 2021,  New York State enacted the Marijuana Regulation and Taxation Act, fully legalizing the recreational use of cannabis. The plant had been decriminalized for medical use in 2016, and decriminalized for recreational purposes in 2019. </p>
 
-<p>Although the new law requires cannabis vendors to acquire a license, few sellers paid any heed to these requirements. “The black market isn’t struggling to meet demand,” wrote the Wall Street Journal, “as every nose in Manhattan can attest.” Ad-hoc dispensaries have sprouted across the city, selling from stores, vehicles, and on sidewalks. </p>
+<p>Following legalization, the number of drug-related complaints to the city's 311 more than doubled. Not all of those calls relate to cannabis, but the increase corresponds with a sharp increase in ad-hoc dispensaries. “The black market isn’t struggling to meet demand,” wrote the <a href="https://www.wsj.com/articles/the-progressive-paradox-on-marijuana-new-york-weed-kathy-hochul-john-hickenlooper-11669072860"><i>Wall Street Journal</i></a>, “as every nose in Manhattan can attest.” </p>
 
-<p>Following legalization, the number of drug-related complaints more than doubled, according to data from the city's 311 hotline. However, not all areas were equally affected: some neighborhoods reported only a handful of complaints, while others saw hundreds of complaints to a single address.</p>
-
-<p>There are some caveats to these data: first, not all drug-activity calls are related to cannabis, and the available data set does not distinguish between different substances. Moreover, the data set is merely a record of drug complaints. In other words, these data could simply be a mapping of areas with exceptionally square neighbors. </p>
-
+<p> However, not all areas are equally affected: some neighborhoods reported only a handful of complaints, while others saw hundreds of complaints to a single address.</p>
 
 <iframe title="Drug Activity Complaints by Area" aria-label="Map" id="datawrapper-chart-irFxH" src="https://datawrapper.dwcdn.net/irFxH/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="778" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
 
-<p>At first glance, the most drug activity appeared to occur in Queens community board 8. One address in particular stood out: the Queens General Hospital, at 82-68 164 street, was the site of over 1400 drug-related complaints in 2022. In fact, if the sidewalk outside the hospital were its own community board, it would still have more drug-related complaints than any other community district.</p>
+<p>At first glance, the most drug activity appeared to occur in Queens community board 8. One address in particular stood out: the Queens Hospital Center, at 82-68 164th Street, was the site of over 1,400 drug-related complaints in 2022. If the sidewalk outside that hospital were its own community board, it would have twice as many drug complaints as any other community district.</p>
 
-<p>However, there is a simple explanation for that outlier. “We call it the robo-caller,” said Deputy Investigator Kevin Chan of the 107th precinct. “This person or this program is constantly sending us calls.”</p>
+<p>“We call it the robo-caller,” said Deputy Investigator Kevin Chan of the 107th precinct. “This person or this program is constantly sending us calls.”</p>
 
-<p>In addition to the hospital, Chan identified two other addresses that were frequent targets of 311 spam. Both addresses—the local fire department and police precinct—had received over 400 drug activity calls each.</p>
+<p>In addition to the hospital, Chan identified two nearby addresses—the fire department and the police precinct—that were also targets of 311 spam. These three addresses together account for over a third of the city's drug complaints.</p>
 
 <p>“I gotta assume it's a program,” Chan added. “I can't imagine someone just sitting there hitting send every single minute.”</p>
 
 <p>Chan also confirmed that cannabis constituted the majority of drug-related calls. “I would say probably 90% of drug calls are weed calls,” he said in a telephone interview. “Everyone knows what weed is. You don’t smell the other stuff.”</p>
+
+<p> Omitting those outliers leaves Manhattan's 11th community board as the place with the most drug complaints—an area corresponding with East Harlem and Randall's Island. 
 
 </div>
 
