--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<figcaption><i>This sidewalk  was the subject of 1,400 drug complaints in 2022.</i> Photo: Andrew Ancheta</figcaption>
 -->
 	<img src="images/smokeshop4.jpeg" alt="Picture of a smoke shop in East Harlem">
-	<figcaption><i>After legalization, many smoke shops have turned into unlicensed dispensaries. This shop is located in Manhattan's 11th community board, an area that received over 590 complaints of drug activity.</i> Photo: Andrew Ancheta</figcaption>
+	<figcaption><i>After legalization, many smoke shops turned into unlicensed dispensaries. This shop is located in Manhattan's 11th community board, an area that received over 590 complaints of drug activity.</i> Photo: Andrew Ancheta</figcaption>
 
 </figure>
 
