--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ On March 31, 2021,  New York State enacted the Marijuana Regulation and Taxation
 
 <iframe title="Drug Activity Complaints by Area" aria-label="Map" id="datawrapper-chart-irFxH" src="https://datawrapper.dwcdn.net/irFxH/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="778" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
 
-<p>At first glance, the most drug activity appeared to occur in Queens community board 8. One address in particular stood out: the Queens Hospital Center, at 82-68 164th Street, was the site of over 1,400 drug-related complaints in 2022. If the sidewalk outside that hospital were its own community board, it would still have more drug complaints than any other district.</p>
+<p>One address in particular stands out: the Queens Hospital Center, at 82-68 164th Street, was the site of over 1,400 drug-related complaints in 2022. If the sidewalk outside that hospital were its own community board, it would still have more drug complaints than any other district.</p>
 
 <p> “We call it the robo-caller,” said Deputy Investigator Kevin Chan of the 107th precinct. “This person or this program is constantly sending us calls.”</p>
 
