--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ On March 31, 2021,  New York State enacted the Marijuana Regulation and Taxation
 
 <h4>Data Source:</h4>
 
-	<h8>NYC Open Data <a href="https://data.cityofnewyork.us/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9">311 Service Requests from 2010 to Present</a></h8>
+	<h8>NYC Open Data. <a href="https://data.cityofnewyork.us/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9">311 Service Requests from 2010 to Present</a></h8>
 
 
 <div>
